--- a/index.html
+++ b/index.html
@@ -1,1 +1,104 @@
-<h1>UNDER MAINTAINACE</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nayan Bhattarai</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap"
+      rel="stylesheet"
+    />
+
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        font-family: "Rubik Doodle Shadow", sans-serif;
+        background-color: #f7faf5;
+        height: 100dvh;
+      }
+
+      .content {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .info {
+        text-align: center;
+      }
+
+      h1 {
+        font-size: 52px;
+        margin-bottom: 20px;
+        cursor: none;
+      }
+
+      p {
+        font-size: 60px;
+        font-weight: bold;
+        margin-bottom: 16px;
+        cursor: none;
+      }
+
+      a {
+        display: inline-block;
+        text-decoration: none;
+        color: black;
+        font-weight: bold;
+        margin-bottom: 12px;
+        font-weight: 20px;
+      }
+
+      h1:hover,
+      p:hover,
+      a:hover {
+        color: #a2a0d2;
+      }
+
+      @media screen and (max-width: 992px) {
+        h1 {
+          font-size: 48px;
+        }
+
+        p {
+          font-size: 52px;
+        }
+      }
+
+      @media screen and (max-width: 768px) {
+        h1 {
+          font-size: 28px;
+          margin-bottom: 16px;
+        }
+
+        p {
+          font-size: 40px;
+        }
+
+        a {
+          font-size: 14px;
+          text-decoration: underline;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="content">
+      <div class="info">
+        <h1>Nayan Bhattarai</h1>
+        <p>SOC Engineer</p>
+        <a href="mailto:unix.toor">unix.toor@gmail.com</a>
+        <br />
+        <a href="tel:+977-9815977267">+977-9815977267</a>
+      </div>
+    </div>
+  </body>
+</html>
